# SO2-proj

./: .gitignore  CMakeLists.txt  README.md  makefile  valgrind-out.txt
include/: CargoTrain.h  Driver.h  PassengerTrain.h  RouteElement.h  Station.h  Train.h
include/enums/: SemaphoreEnum.h
include/gui/: Canva.h  Drawable.h  InfoBuffer.h  PromptWindow.h  ViewPort.h  utility.h
src/: CargoTrain.cpp  Driver.cpp  PassengerTrain.cpp  Station.cpp  Train.cpp  main.cpp
src/gui/: Canva.cpp  Drawable.cpp  InfoBuffer.cpp  PromptWindow.cpp  ViewPort.cpp  utility.cpp
